--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: rust
 cache: cargo
 rust:
-  - nightly
+    - stable
+    - beta
+    - nightly
+
+jobs:
+  allow_failures:
+    - rust: nightly
